Add error messaging

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#2d3737" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://arnoldclark.github.io/chassis/3.2.0/chassis.css" />
+    <link rel="stylesheet" href="https://arnoldclark.github.io/chassis/3.2.0/chassis-ui.css" />
     <!-- ^ Ol' Faithful ^ -->
 
     <title>Interest Free Loan</title>
